--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="informatica.html">Informatica</a></li>
+            <li><a href="school.html">School</a></li>
+        </ul>
+    </nav>
     <h1>
         De grote Informatica Website   
     </h1>
