--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="informatica.html">Informatica</a></li>
-            <li><a href="school.html">School</a></li>
+            <li class="navitem"><a href="index.html">Home</a></li>
+            <li class="navitem"><a href="informatica.html">Informatica</a></li>
+            <li class="navitem"><a href="school.html">School</a></li>
         </ul>
     </nav>
     <h1>
