--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <script src="script.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -10,9 +10,9 @@
 <body>
     <nav>
         <ul>
-            <li class="navitem"><a href="index.html">Home</a></li>
-            <li class="navitem"><a href="informatica.html">Informatica</a></li>
-            <li class="navitem"><a href="school.html">School</a></li>
+            <li><a class="navitem" href="index.html">Home</a></li>
+            <li><a class="navitem" href="informatica.html">Informatica</a></li>
+            <li><a class="navitem" href="school.html">School</a></li>
         </ul>
     </nav>
     <h1>
