--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li class="navitem"><a class="navitem" href="index.html">>_</a></li>
+            <li class="navitem"><a class="navitem logo" href="index.html">>_</a></li>
             <li class="navitem"><a class="navitem" href="index.html">Home</a></li>
             <li class="navitem"><a class="navitem" href="informatica.html">Informatica</a></li>
             <li class="navitem"><a class="navitem" href="school.html">School</a></li>
