--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>infrmatica-website</title>
+    <title>informatica-website</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li class="navitem"><a class="navitem logo" href="index.html">>_</a></li>
+            <li class="navitem"><a class="navitem" href="index.html">>_</a></li>
             <li class="navitem"><a class="navitem" href="index.html">Home</a></li>
             <li class="navitem"><a class="navitem" href="informatica.html">Informatica</a></li>
             <li class="navitem"><a class="navitem" href="school.html">School</a></li>
