--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>informatica-website</title>
+    <title>Informatica-website</title>
 </head>
 <body>
     <nav>
-        <ul>
-            <li class="navitem"><a class="navitem" href="index.html">>_</a></li>
+        <ul class="navbar">
+            <li class="navitem"><a class="navitem logo" href="index.html">>_</a></li>
             <li class="navitem"><a class="navitem" href="index.html">Home</a></li>
             <li class="navitem"><a class="navitem" href="informatica.html">Informatica</a></li>
             <li class="navitem"><a class="navitem" href="school.html">School</a></li>
         </ul>
     </nav>
-    <h1>
+    <h1 id="title">
         De grote Informatica Website   
     </h1>
     <p>
-        Dit is is de website die ik voor Informatica heb gemaakt.
+        Dit is is de website die ik voor Informatica heb gemaakt. 
     </p>
 </body>
 </html>
