Epic website night

--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 </head>
 <body>
     <nav>
-        <ul class="navbar">
-            <li class="navitem"><a class="navitem logo" href="index.html">>_</a></li>
-            <li class="navitem"><a class="navitem" href="index.html">Home</a></li>
-            <li class="navitem"><a class="navitem" href="informatica.html">Informatica</a></li>
-            <li class="navitem"><a class="navitem" href="school.html">School</a></li>
-        </ul>
+        <div class="navbar">
+            <div class="navitem"><a class="navitem logo" href="index.html">>_</a></div>
+            <div class="navitem"><a class="navitem" href="index.html">Home</a></div>
+            <div class="navitem"><a class="navitem" href="informatica.html">Informatica</a></div>
+            <div class="navitem"><a class="navitem" href="school.html">School</a></div>
+        </div>
     </nav>
-    <h1 id="title">
-        De grote Informatica Website   
-    </h1>
-    <p>
-        Dit is is de website die ik voor Informatica heb gemaakt. 
-    </p>
+    <div class="textbody">
+        <h1 id="title">
+            De grote Informatica Website   
+        </h1>
+        <p>
+            Dit is is de website die ik voor Informatica heb gemaakt. 
+        </p>
+    </div>
 </body>
 </html>
