--- a/informatica.html
+++ b/informatica.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informatica-website</title>
 </head>
 <body>
-  <h1>
-    Het grote vak Informatica!
-  </h1> 
-  <p>
-    Informatica is een heel leuk vak waar leerlingen leren programmeren en hoe computers werken!
-  </p> 
+    <nav>
+        <div class="navbar">
+            <div class="navitem"><a class="navitem logo" href="index.html">>_</a></div>
+            <div class="navitem"><a class="navitem" href="index.html">Home</a></div>
+            <div class="navitem"><a class="navitem" href="informatica.html">Informatica</a></div>
+            <div class="navitem"><a class="navitem" href="school.html">School</a></div>
+        </div>
+    </nav>
+    <div class="textbody">
+        <h1 id="title">
+            Het vak informatica
+        </h1>
+        <p>
+            <em>></em>Informatica is een heel leuk vak waar leerlingen leren programmeren en hoe computers werken.
+        </p>
+    </div>
 </body>
 </html>
