--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
             De grote Informatica Website   
         </h1>
         <p>
-            Dit is is de website die ik voor Informatica heb gemaakt. 
+            >Dit is is de website die ik voor Informatica heb gemaakt. 
         </p>
+        <p id="typewriter">
+        </p>
+        <p id="test"></p>
     </div>
 </body>
 </html>
