--- a/informatica.html
+++ b/informatica.html
@@ -21,7 +21,7 @@
             Het vak informatica
         </h1>
         <p>
-            <em>></em>Informatica is een heel leuk vak waar leerlingen leren programmeren en hoe computers werken.
+            >Informatica is een heel leuk vak waar leerlingen leren programmeren en hoe computers werken.
         </p>
     </div>
 </body>
