--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <p id="typewriter">
         </p>
         <p id="test"></p>
+        <div class="imgdiv">
+            <img src="hackerman.jpg" alt="hackerman">
+        </div>
     </div>
 </body>
 </html>
