--- a/overmij.html
+++ b/overmij.html
@@ -18,18 +18,12 @@
         </div>
     </nav>
     <div class="textbody">
-        <h1 id="title">
-            De grote Informatica Website   
+        <h1>
+            Wie ben ik?
         </h1>
         <p>
-            >Dit is is de website die ik voor Informatica heb gemaakt. 
+            > Ik ben Teun van Bostelen, Ik zit op het Groene Hart Lyceum in Alphen aan den Rijn. Ik ben 15 jaar oud en ik zit in 4 HAVO.
         </p>
-        <p id="typewriter">
-        </p>
-        <p id="test"></p>
-        <div class="imgdiv">
-            <img src="hackerman.jpg" alt="hackerman">
-        </div>
     </div>
 </body>
 </html>
