--- a/informatica.html
+++ b/informatica.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="background">
 <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -14,6 +14,7 @@
             <div class="navitem"><a class="navitem" href="index.html">Home</a></div>
             <div class="navitem"><a class="navitem" href="informatica.html">Informatica</a></div>
             <div class="navitem"><a class="navitem" href="school.html">School</a></div>
+            <div class="navitem"><a class="navitem" href="overmij.html">Over mij</a></div>
         </div>
     </nav>
     <div class="textbody">
