--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="background">
+<html lang="en">
 <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informatica-website</title>
 </head>
-<body>
+<div class="background blur"></div>
+<body class="content">
     <nav>
         <div class="navbar">
             <div class="navitem"><a class="navitem logo" href="index.html">>_</a></div>
