--- a/school.html
+++ b/school.html
@@ -14,6 +14,7 @@
             <div class="navitem"><a class="navitem" href="index.html">Home</a></div>
             <div class="navitem"><a class="navitem" href="informatica.html">Informatica</a></div>
             <div class="navitem"><a class="navitem" href="school.html">School</a></div>
+            <div class="navitem"><a class="navitem" href="overmij.html">Over mij</a></div>
         </div>
     </nav>
     <div class="textbody">
