--- a/school.html
+++ b/school.html
@@ -19,10 +19,10 @@
     </nav>
     <div class="textbody">
         <h1 id="title">
-            De grote Informatica Website   
+            Het Groene Hart Lyceum
         </h1>
         <p>
-            Dit is is de website die ik voor Informatica heb gemaakt. 
+            > Ik zit op het Groene Hart Lyceum in Alphen aan den Rijn.<br > <a href="https://groenehartscholen.nl/lyceum/" class="hyperlink">Hier</a> is de website van de school.
         </p>
     </div>
 </body>
