--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="background">
 <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informatica-website</title>
 </head>
-<div class="background blur"></div>
 <body class="content">
     <nav>
         <div class="navbar">
