--- a/school.html
+++ b/school.html
@@ -24,7 +24,9 @@
         <p>
             > Ik zit op het Groene Hart Lyceum in Alphen aan den Rijn.<br > <a href="https://groenehartscholen.nl/lyceum/" class="hyperlink">Hier</a> is de website van de school.
         </p>
+        <div class="lyceumlogo">
         <img src="lyceumlogo.svg" alt="Het logo van Het Groene Hart Lyceum">
+        </div>
     </div>
 </body>
 </html>
