--- a/informatica.html
+++ b/informatica.html
@@ -22,8 +22,11 @@
             Het vak informatica
         </h1>
         <p>
-            >Informatica is een heel leuk vak waar leerlingen leren programmeren en hoe computers werken.
+            >Informatica is een heel leuk vak waar leerlingen leren programmeren en hoe computers werken. <br>
         </p>
+        <p>Het </p>
+        <a href="https://drive.google.com/file/d/1RKP5r5gIRgfM6cfTbyJV_XAiRi97auFJ/view?usp=sharing">PTA</a> 
+        <p> van dit vak is hier ook te zien.</p>
     </div>
 </body>
 </html>
