--- a/informatica.html
+++ b/informatica.html
@@ -24,9 +24,7 @@
         <p>
             >Informatica is een heel leuk vak waar leerlingen leren programmeren en hoe computers werken. <br>
         </p>
-        <p>Het </p>
-        <a href="https://drive.google.com/file/d/1RKP5r5gIRgfM6cfTbyJV_XAiRi97auFJ/view?usp=sharing">PTA</a> 
-        <p> van dit vak is hier ook te zien.</p>
+        <p>Het </p><a href="https://drive.google.com/file/d/1RKP5r5gIRgfM6cfTbyJV_XAiRi97auFJ/view?usp=sharing">PTA</a><p> van dit vak is hier ook te zien.</p>
     </div>
 </body>
 </html>
