PTA Link Update

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Informatica-website</title>
+    <title>De grote Informatica Website</title>
 </head>
 <body class="content">
     <nav>
@@ -24,9 +24,6 @@
         <p>
             >Dit is is de website die ik voor Informatica heb gemaakt. 
         </p>
-        <p id="typewriter">
-        </p>
-        <p id="test"></p>
         <div class="imgdiv">
             <img src="hackerman.jpg" alt="hackerman"> 
         </div>
