Typewriter effect in css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
     </nav>
     <div class="textbody">
-        <h1 id="title">
+        <h1 id="title typewriter">
             De grote Informatica Website   
         </h1>
         <p>
