--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div class="navitem"><a class="navitem" href="overmij.html">Over mij</a></div>
         </div>
     </nav>
-    <div class="textbody">
-        <h1 id="title typewriter">
+    <div class="textbody typewriter">
+        <h1 id="title">
             De grote Informatica Website   
         </h1>
         <p>
