--- a/school.html
+++ b/school.html
@@ -17,7 +17,7 @@
             <div class="navitem"><a class="navitem" href="overmij.html">Over mij</a></div>
         </div>
     </nav>
-    <div class="textbody">
+    <div class="textbody typewriter">
         <h1 id="title">
             Het Groene Hart Lyceum
         </h1>
