--- a/overmij.html
+++ b/overmij.html
@@ -17,7 +17,7 @@
             <div class="navitem"><a class="navitem" href="overmij.html">Over mij</a></div>
         </div>
     </nav>
-    <div class="textbody">
+    <div class="textbody typewriter">
         <h1>
             Wie ben ik?
         </h1>
