--- a/login.html
+++ b/login.html
@@ -15,6 +15,7 @@
             <div class="navitem"><a class="navitem" href="informatica.html">Informatica</a></div>
             <div class="navitem"><a class="navitem" href="school.html">School</a></div>
             <div class="navitem"><a class="navitem" href="overmij.html">Over mij</a></div>
+            <div class="navitem"><a href="login.html" class="navitem">Login</a></div>
         </div>
     </nav>
     <main id="main-holder" class="textbody typewriter">
@@ -24,7 +25,7 @@
 
         <div id="login-error-holder">
             <p id="login-error-msg">Ongeldige gebruikersnaam <span id="error-msg-second-line">en/of wachtwoord</span></p>
-            <span id="error-msg-second-line">en/of wachtwoord</span>
+            <span class="loginText" id="error-msg-second-line">en/of wachtwoord</span>
         </div>
 
         <form id="login-form">
