--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
             <div class="navitem"><a href="login.html" class="navitem">Login</a></div>
         </div>
     </nav>
-    <main id="main-holder" class="textbody typewriter">
+    <main id="main-holder" class="textbody">
         <h1 id="title login-header">
             Login
         </h1>
