--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="navitem"><a href="login.html" class="navitem">Login</a></div>
         </div>
     </nav>
-    <div class="textbody typewriter">
+    <div class="textbody">
         <h1 id="title">
             De grote Informatica Website   
         </h1>
