--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <div class="navbar">
             <div class="navitem"><a class="navitem logo" href="index.html">>_</a></div>
-            <div class="navitem"><a class="navitem" href="index.html">Home</a></div>
+            <div class="navitem"><a class="navitem active" href="index.html">Home</a></div>
             <div class="navitem"><a class="navitem" href="informatica.html">Informatica</a></div>
             <div class="navitem"><a class="navitem" href="school.html">School</a></div>
             <div class="navitem"><a class="navitem" href="overmij.html">Over mij</a></div>
