--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
             <div class="navitem"><a class="navitem" href="informatica.html">Informatica</a></div>
             <div class="navitem"><a class="navitem" href="school.html">School</a></div>
             <div class="navitem"><a class="navitem" href="overmij.html">Over mij</a></div>
-            <div class="navitem"><a href="login.html" class="navitem">Login</a></div>
+            <div class="navitem"><a href="login.html" class="active navitem">Login</a></div>
         </div>
     </nav>
     <main id="main-holder" class="textbody">
