--- a/overmij.html
+++ b/overmij.html
@@ -14,7 +14,7 @@
             <div class="navitem"><a class="navitem" href="index.html">Home</a></div>
             <div class="navitem"><a class="navitem" href="informatica.html">Informatica</a></div>
             <div class="navitem"><a class="navitem" href="school.html">School</a></div>
-            <div class="navitem"><a class="navitem" href="overmij.html">Over mij</a></div>
+            <div class="navitem"><a class="active navitem" href="overmij.html">Over mij</a></div>
             <div class="navitem"><a href="login.html" class="navitem">Login</a></div>
         </div>
     </nav>
