--- a/geheim.html
+++ b/geheim.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De grote Informatica Website</title>
-    <script defer src="script.js"></script>
 </head>
 <body class="content">
     <nav>
@@ -16,22 +15,11 @@
             <div class="navitem"><a class="navitem" href="informatica.html">Informatica</a></div>
             <div class="navitem"><a class="navitem" href="school.html">School</a></div>
             <div class="navitem"><a class="navitem" href="overmij.html">Over mij</a></div>
-            <div class="navitem"><a href="login.html" class="active navitem">Login</a></div>
+            <div class="navitem"><a href="login.html" class="navitem">Login</a></div>
         </div>
     </nav>
-    <main id="main-holder" class="textbody">
-        <h1 id="title login-header">
-            Login
-        </h1>
-
-        <div id="login-error-holder">
-            <p id="login-error-msg">Ongeldige gebruikersnaam <span id="error-msg-second-line">en/of wachtwoord</span></p>
-        </div>
-
-        <form id="login-form">
-            <input type="text" name="username" id="username-field" class="login-form-field" placeholder="De Code">
-            <input type="submit" value="Login" id="login-form-submit">
-        </form>
-    </main>
+    <div class="textbody typewriter">
+        
+    </div>
 </body>
-<html>
+</html>
