Login System Added

--- a/login.html
+++ b/login.html
@@ -24,14 +24,9 @@
             Login
         </h1>
 
-        <div id="login-error-holder">
-            <p id="login-error-msg">Ongeldige gebruikersnaam <span id="error-msg-second-line">en/of wachtwoord</span></p>
-        </div>
+        <input class="inputField" type="password" placeholder="De code" id="username">
+        <button id="button" onclick="checkvalue()">login</button>
 
-        <form id="login-form">
-            <input type="text" name="username" id="username-field" class="login-form-field" placeholder="De Code">
-            <input type="submit" value="Login" id="login-form-submit">
-        </form>
     </main>
 </body>
 <html>
