--- a/geheim.html
+++ b/geheim.html
@@ -18,8 +18,9 @@
             <div class="navitem"><a href="login.html" class="navitem">Login</a></div>
         </div>
     </nav>
-    <div class="textbody typewriter">
-        
+    <div class="textbody typewriter gamecontainer">
+        <h1>U heeft het geheim geunlocked!</h1>
+        <iframe src="https://funhtml5games.com?embed=pacmanfps" style="width:640px;height:480px;border:none;" frameborder="0" scrolling="no"></iframe>
     </div>
 </body>
 </html>
