--- a/informatica.html
+++ b/informatica.html
@@ -18,7 +18,7 @@
             <div class="navitem"><a href="login.html" class="navitem">Login</a></div>
         </div>
     </nav>
-    <div class="textbody typewriter">
+    <div class="textbody typewriter" style="height: 100%;">
         <h1 id="title">
             Het vak informatica
         </h1>
@@ -26,6 +26,8 @@
             >Informatica is een heel leuk vak waar leerlingen leren programmeren en hoe computers werken. <br>
         </p>
         <p>Het <a class="hyperlink" href="https://drive.google.com/file/d/1RKP5r5gIRgfM6cfTbyJV_XAiRi97auFJ/view?usp=sharing">PTA</a> van dit vak is hier ook te zien.</p>
+        <iframe class="PTA" src="PTA.pdf" width="50%" height="80%">
+        </iframe>
     </div>
 </body>
 </html>
