--- a/informatica.html
+++ b/informatica.html
@@ -26,7 +26,7 @@
             >Informatica is een heel leuk vak waar leerlingen leren programmeren en hoe computers werken. <br>
         </p>
         <p>Het <a class="hyperlink" href="https://drive.google.com/file/d/1RKP5r5gIRgfM6cfTbyJV_XAiRi97auFJ/view?usp=sharing">PTA</a> van dit vak is hier ook te zien.</p>
-        <iframe class="PTA" src="PTA.pdf" width="50%" height="80%">
+        <iframe class="PTA" src="PTA.pdf">
         </iframe>
     </div>
 </body>
