--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             >Dit is is de website die ik voor Informatica heb gemaakt. 
         </p>
         <div class="imgdiv">
-            <img src="hackerman.jpg" alt="hackerman"> 
+            <img src="Website.jpg" alt="hackerman"> 
         </div>
     </div>
 </body>
