--- a/rekenmachine.html
+++ b/rekenmachine.html
@@ -3,32 +3,32 @@
 <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
+    <!-- jquery dingetje -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Informatica-website</title>
+    <title>De grote Informatica Website</title>
 </head>
-<body>
+<body class="content">
     <nav>
         <div class="navbar">
             <div class="navitem"><a class="navitem logo" href="index.html">>_</a></div>
-            <div class="navitem"><a class="navitem" href="index.html">Home</a></div>
+            <div class="navitem"><a class="navitem active" href="index.html">Home</a></div>
             <div class="navitem"><a class="navitem" href="informatica.html">Informatica</a></div>
-            <div class="navitem"><a class="active navitem" href="school.html">School</a></div>
+            <div class="navitem"><a class="navitem" href="school.html">School</a></div>
             <div class="navitem"><a class="navitem" href="overmij.html">Over mij</a></div>
             <div class="navitem"><a href="login.html" class="navitem">Login</a></div>
         </div>
     </nav>
     <div class="textbody typewriter">
         <h1 id="title">
-            Het Groene Hart Lyceum
+            Scheikunde rekenmachine  
         </h1>
         <p>
-            > Ik zit op het Groene Hart Lyceum in Alphen aan den Rijn.<br > <a href="https://groenehartscholen.nl/lyceum/" class="hyperlink">Hier</a> is de website van de school.
-            > Mijn favoriete vak is Biologie, omdat het een vak is dat nooit theoretisch is. 
+            >Dit is een rekenmachine om de PPM van een stof in een mengsel te meten
         </p>
-        <div class="lyceumlogo">
-        <img src="lyceumlogo.svg" alt="Het logo van Het Groene Hart Lyceum">
+        <div class="imgdiv">
+            <img src="Website.jpg" alt="hackerman"> 
         </div>
     </div>
 </body>
