General improvements and added some extra stuff

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </h1>
         <p>
             >Dit is is de website die ik voor Informatica heb gemaakt. 
+            <br>Als u naar een andere pagina wilt navigeren kunt u in de balk hierboven een van de <a target=”_blank” class="hyperlink" href="https://developer.mozilla.org/en-US/docs/Learn/Common_questions/Web_mechanics/What_are_hyperlinks">links</a> klikken
         </p>
         <div class="imgdiv">
             <img src="Website.jpg" alt="hackerman"> 
