--- a/overmij.html
+++ b/overmij.html
@@ -23,9 +23,11 @@
         <h1>
             Wie ben ik?
         </h1>
-        <p>
+        <p class="overmijtext">
             > Ik ben Teun van Bostelen, Ik zit op het Groene Hart Lyceum in Alphen aan den Rijn. Ik ben 15 jaar oud en ik zit in 4 HAVO.
+            <br> Ik zit op scouting 
         </p>
+        <img src="scouting-nederland.svg" id="scoutingsvg">
     </div>
 </body>
 </html>
