--- a/school.html
+++ b/school.html
@@ -24,7 +24,8 @@
             Het Groene Hart Lyceum
         </h1>
         <p>
-            > Ik zit op het Groene Hart Lyceum in Alphen aan den Rijn.<br > <a href="https://groenehartscholen.nl/lyceum/" class="hyperlink">Hier</a> is de website van de school.
+            > Ik zit op het Groene Hart Lyceum in Alphen aan den Rijn.<br> <a target="_blank" href="https://groenehartscholen.nl/lyceum/" class="hyperlink">Hier</a> is de website van de school.
+            <br>
             > Mijn favoriete vak is Biologie, omdat het een vak is dat nooit theoretisch is. 
         </p>
         <div class="lyceumlogo">
