Link to cijferlijst and context added

--- a/overmij.html
+++ b/overmij.html
@@ -25,7 +25,7 @@
         </h1>
         <p class="overmijtext">
             > Ik ben Teun van Bostelen, Ik zit op het Groene Hart Lyceum in Alphen aan den Rijn. Ik ben 15 jaar oud en ik zit in 4 HAVO.
-            <br> Ik zit op scouting 
+            <br> Ik zit op scouting bij Scouting Rheijnewoud in Hazerswoude Rijndijk
         </p>
         <img src="scouting-nederland.svg" id="scoutingsvg">
     </div>
