--- a/school.html
+++ b/school.html
@@ -26,7 +26,8 @@
         <p>
             > Ik zit op het Groene Hart Lyceum in Alphen aan den Rijn.<br> <a target="_blank" href="https://groenehartscholen.nl/lyceum/" class="hyperlink">Hier</a> is de website van de school.
             <br>
-            > Mijn favoriete vak is Biologie, omdat het een vak is dat nooit theoretisch is. 
+            > Mijn favoriete vak is Biologie, omdat het interessant is om te leren wat er in het lichaam en planten gebeurd.
+            <br> <a class="hyperlink" target="_blank" href="https://docs.google.com/document/d/e/2PACX-1vQ2vaTpdDpd0UF47Ey4HzpSUKP46uOAsCs4yD13Nu-7HjV-E0PUDuAbPmuX3WPumB2DJsval0PiRjL7/pub">Hier</a> kunt u ook mijn cijferlijst zien 
         </p>
         <div class="lyceumlogo">
         <img src="lyceumlogo.svg" alt="Het logo van Het Groene Hart Lyceum">
