--- a/game.html
+++ b/game.html
@@ -17,7 +17,8 @@
             <div class="navitem"><a class="navitem" href="informatica.html">Informatica</a></div>
             <div class="navitem"><a class="navitem" href="school.html">School</a></div>
             <div class="navitem"><a class="navitem" href="overmij.html">Over mij</a></div>
-            <div class="navitem"><a href="login.html" class="active navitem">Login</a></div>
+            <div class="navitem"><a href="game.html" class="active navitem">Unlock</a></div>
+            <div class="navitem"><a href="login.php" id="login" class="navitem">Login</a></div>
         </div>
     </nav>
     <main id="main-holder" class="textbody">
@@ -27,7 +28,6 @@
 
         <input class="inputField" type="password" placeholder="De code" id="username">
         <button id="button" onclick="checkvalue()">login</button>
-
     </main>
 </body>
 <html>
