--- a/overmij.html
+++ b/overmij.html
@@ -25,7 +25,9 @@
         </h1>
         <p class="overmijtext">
             > Ik ben Teun van Bostelen, Ik zit op het Groene Hart Lyceum in Alphen aan den Rijn. Ik ben 15 jaar oud en ik zit in 4 HAVO.
-            <br> Ik zit op scouting bij Scouting Rheijnewoud in Hazerswoude Rijndijk
+            <br> Ik zit op scouting bij Scouting Rheijnewoud in Hazerswoude Rijndijk, waar ik elke vrijdag avond samen met andere scouts nieuwe dingen leer.
+            <br><br>In mijn vrije tijd game ik vaak of leer ik over programmeren en computers. 
+            <br>Na de Havo wil ik HBO ICT gaan doen om echt te leren programmeren en leren hoe computers in elkaar zitten.
         </p>
         <img src="scouting-nederland.svg" id="scoutingsvg">
     </div>
