--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     <!-- jquery dingetje -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <meta charset="UTF-8">
+    <scrirt src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></scrirt<script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De grote Informatica Website</title>
 </head>
