Eco website link added

--- a/overmij.html
+++ b/overmij.html
@@ -28,6 +28,8 @@
             <br> Ik zit op scouting bij Scouting Rheijnewoud in Hazerswoude Rijndijk, waar ik elke vrijdag avond samen met andere scouts nieuwe dingen leer.
             <br><br>In mijn vrije tijd game ik vaak of leer ik over programmeren en computers. 
             <br>Na de Havo wil ik HBO ICT gaan doen om echt te leren programmeren en leren hoe computers in elkaar zitten.
+            <p>Ik heb een jaar geleden mijn eerste website gemaakt samen met mijn vriend Collin,
+            <br><a href="https://ubiquitous-sfogliatella-b63af4.netlify.app/" target="_blank">deze website</a>hadden we gemaakt voor economie om te demonstreren hoe ons bedrijf nieuwe klanten te krijgen</p>
         </p>
         <img src="scouting-nederland.svg" id="scoutingsvg">
     </div>
