--- a/school.html
+++ b/school.html
@@ -19,18 +19,21 @@
             <div class="navitem"><a href="login.html" class="navitem">Login</a></div>
         </div>
     </nav>
-    <div class="textbody typewriter">
-        <h1 id="title">
+    <div class="Textbodybox typewriter">
+        <h1 id="titleElement">
             Het Groene Hart Lyceum
         </h1>
         <p>
-            > Ik zit op het Groene Hart Lyceum in Alphen aan den Rijn.<br> <a target="_blank" href="https://groenehartscholen.nl/lyceum/" class="hyperlink">Hier</a> is de website van de school.
-            <br>
-            > Mijn favoriete vak is Biologie, omdat het interessant is om te leren wat er in het lichaam en planten gebeurd.
-            <br> <a class="hyperlink" target="_blank" href="https://docs.google.com/document/d/e/2PACX-1vQ2vaTpdDpd0UF47Ey4HzpSUKP46uOAsCs4yD13Nu-7HjV-E0PUDuAbPmuX3WPumB2DJsval0PiRjL7/pub">Hier</a> kunt u ook mijn cijferlijst zien 
+            > Ik zit op het Groene Hart Lyceum in Alphen aan den Rijn.<br>
+            Dit is een Christelijke school waardoor we LeVo krijgen. Dit vak vindt ik het minst leuke vak op de hele school
+            Klik <a target="_blank" href="https://groenehartscholen.nl/lyceum/" class="hyperlink">hier</a> voor de webiste van de school.
+            <br><br>
+            > Mijn favoriete vakken zijn Biologie en Informatica.
+            <br>Biologie vindt ik erg leuk omdat het interessant is om te leren wat er in beesten gebeurd.
+            <br>Informacica vindt ik leuk als we bezig zijn met apps, omdat je in de echte wereld vooral apps moet maken en onderhouden.
         </p>
         <div class="lyceumlogo">
-        <img src="lyceumlogo.svg" alt="Het logo van Het Groene Hart Lyceum">
+        <img class="whiteImg" src="lyceumlogo.svg" alt="Het logo van Het Groene Hart Lyceum">
         </div>
     </div>
 </body>
