More info in overmij.html

--- a/overmij.html
+++ b/overmij.html
@@ -30,6 +30,9 @@
             <br>Na de Havo wil ik HBO ICT gaan doen om echt te leren programmeren en leren hoe computers in elkaar zitten.
             <p>Ik heb een jaar geleden mijn eerste website gemaakt samen met mijn vriend Collin. Deze website hadden we voor economie om te demonstreren hoe ons bedrijf nieuwe klanten te krijgen
             <br>Klik <a href="https://ubiquitous-sfogliatella-b63af4.netlify.app/">hier</a> voor de website.
+            <br><br>
+            Ik vindt de vakantie altijd heel erg leuk, omdat ik dan kan kamperen. 
+            <br>Het is altijd leuk om gewoon even een pauze van je normale leven te hebben! Gewoon lekker wandelen en lezen zonder enige verplichtingen.
         </p>
         <img class="whiteImg" src="scouting-nederland.svg" id="scoutingsvg">
     </div>
