--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
     </nav>
     <div class="textbody typewriter">
         <h1 id="title">
-            De grote Informatica Website   
+            De grote Informatica Website
         </h1>
         <p>
             > Dit is is de website die ik voor het vak Informatica heb gemaakt. 
-            <br>Als u naar een andere pagina wilt navigeren, kunt u in de balk hierboven een van de links klikken
+            <br>Klik op de links bovenaan om naar een andere pagina te komen.
+            <br>Contact: <a class="hyperlink" href="mailto:40020@youscope.nl">40020@youscope.nl</a>
         </p>
         <div class="imgdiv">
-            <img src="Website.jpg" alt="hackerman"> 
+            <img src="landschape.jpeg" alt="Teun"> 
         </div>
     </div>
 </body>
