--- a/informatica.html
+++ b/informatica.html
@@ -24,11 +24,13 @@
             Het vak informatica
         </h1>
         <p>
-            >Informatica is een leuk vak waar leerlingen leren programmeren en hoe computers werken. <br>
+            > Informatica vind ik vooral interessant als we apps ontwikkelen. Dit is vooral relevant voor mijn toekomst, ik wil namelijk developer worden. <br>
         </p>
         <div class="embeds">
             <p>Het <a target=”_blank” class="hyperlink" href="https://drive.google.com/file/d/1RKP5r5gIRgfM6cfTbyJV_XAiRi97auFJ/view?usp=sharing">PTA</a> van dit vak is hier ook te zien.</p>
-            <p>Ik heb voor dit vak ook nog een aantal opdrachten gemaakt die u <a target="_blank" class="hyperlink" href="https://docs.google.com/document/d/e/2PACX-1vR207Cc4UnY8CGA0mWM4FC-7WM8kAHUjh9jVVgR5JfN8nufNmk0DA6YZzn04bulPCVZAT2OrhELpZSj/pub">hier</a></p>
+            <p>Ik heb voor dit vak ook nog een aantal opdrachten gemaakt die u 
+                <a target="_blank" class="hyperlink" href="https://docs.google.com/document/d/e/2PACX-1vR207Cc4UnY8CGA0mWM4FC-7WM8kAHUjh9jVVgR5JfN8nufNmk0DA6YZzn04bulPCVZAT2OrhELpZSj/pub">hier</a>
+                 kunt vinden.</p>
             <iframe class="PTA" src="PTA.pdf">
         </div>
     </div>
