--- a/geheim.html
+++ b/geheim.html
@@ -20,7 +20,7 @@
         </div>
     </nav>
     <div class="textbody typewriter gamecontainer">
-        <h1>U heeft het geheim geunlocked!</h1>
+        <h1>U heeft het geheim ontgrendeld!</h1>
         <iframe src="https://funhtml5games.com?embed=pacmanfps" style="width:640px;height:480px;border:none;" frameborder="0" scrolling="no"></iframe>
     </div>
 </body>
