--- a/login.html
+++ b/login.html
@@ -26,7 +26,11 @@
         </h1>
 
         <input class="inputField" type="password" placeholder="De code" id="username">
-        <button id="button" onclick="checkvalue()">login</button>
+        <button id="button" class="loginText" onclick="checkvalue()">login</button>
+        <p class="loginText">
+            Het wachtwoord is "wachtwoord" in het Engels.
+            <br>Voer het wachtwoord in en druk op Login
+        </p>
 
     </main>
 </body>
