--- a/overmij.html
+++ b/overmij.html
@@ -24,12 +24,12 @@
             Wie ben ik?
         </h1>
         <p class="overmijtext">
-            > Mijn naam is Teun van Bostelen. Ik zit op het Groene Hart Lyceum in Alphen aan den Rijn. Ik ben 15 jaar oud en ik zit in 4 HAVO.
+            > Mijn naam is Teun van Bostelen. Ik zit op het Groene Hart Lyceum in Alphen aan den Rijn. Ik ben 16 jaar oud en ik zit in 4 HAVO.
             <br> Ik zit op scouting bij Scouting Rheijnewoud in Hazerswoude Rijndijk, waar ik elke vrijdag avond samen met andere scouts nieuwe dingen leer.
-            <br><br>In mijn vrije tijd game ik vaak of leer ik over programmeren en computers omdat ik het heel interessant vindt hoe programmas werken en . 
-            <br>Na de Havo wil ik HBO ICT gaan doen om echt te leren programmeren en leren hoe computers in elkaar zitten.
+            <br><br>In mijn vrije tijd game ik vaak of leer ik over programmeren en computers omdat ik het heel interessant vindt hoe programmas werken, en hoe ze worden gemaakt 
+            <br>Na de Havo wil ik HBO ICT studeren om echt te leren programmeren en leren hoe computers in elkaar zitten.
             <p>Ik heb een jaar geleden mijn eerste website gemaakt samen met mijn vriend Collin. 
-            <br>Deze website hadden we voor economie om te demonstreren hoe ons bedrijf nieuwe klanten te krijgen
+            <br>Deze website hadden we voor economie gemaakt om te demonstreren hoe ons bedrijf nieuwe klanten te krijgen
             <br>Klik <a target="_blank" class="hyperlink" href="https://ubiquitous-sfogliatella-b63af4.netlify.app/">hier</a> voor de website.
             <br><br>
             Ik vindt de vakantie altijd heel erg leuk, omdat ik dan kan kamperen. 
