--- a/school.html
+++ b/school.html
@@ -25,11 +25,11 @@
         </h1>
         <p>
             > Ik zit op het Groene Hart Lyceum in Alphen aan den Rijn.<br>
-            Dit is een Christelijke school waardoor we LeVo krijgen. Dit vak vindt ik het minst leuke vak op de hele school
-            Klik <a target="_blank" href="https://groenehartscholen.nl/lyceum/" class="hyperlink">hier</a> voor de website van de school.
+            Dit is een Christelijke school waardoor we LeVo krijgen. Dit vak vindt ik het minst leuke vak op de hele school. 
+            <br>Klik <a target="_blank" href="https://groenehartscholen.nl/lyceum/" class="hyperlink">hier</a> voor de website van de school.
             <br><br>
             > Mijn favoriete vakken zijn Biologie en Informatica.
-            <br>Biologie vindt ik erg leuk omdat het interessant is om te leren wat er in beesten gebeurd.
+            <br>Biologie vindt ik erg leuk omdat het interessant is om te leren wat er in organismen gebeurd.
             <br>Informatica vindt ik leuk als we bezig zijn met apps, omdat je in de echte wereld vooral apps moet maken en onderhouden.
         </p>
         <div class="lyceumlogo">
