mirhonna image added

--- a/overmij.html
+++ b/overmij.html
@@ -33,9 +33,11 @@
             <br>Klik <a target="_blank" class="hyperlink" href="https://ubiquitous-sfogliatella-b63af4.netlify.app/">hier</a> voor de website.
             <br><br>
             Ik vindt de vakantie altijd heel erg leuk, omdat ik dan kan kamperen. 
-            <br>Het is altijd leuk om gewoon even een pauze van je normale leven te hebben! Gewoon lekker wandelen en lezen zonder enige verplichtingen.
+            <br>Het is altijd leuk om gewoon even een pauze van je normale leven te hebben!
+            <br>Gewoon lekker wandelen en lezen zonder enige verplichtingen.
         </p>
-        <img class="whiteImg" src="scouting-nederland.svg" id="scoutingsvg">
+        <img class="whiteImg" src="scoutinggroep.jpeg" id="scoutingsvg">
+        <img src="mirhonna.jpeg" alt="Teun in berg" id="bergFoto">
     </div>
 </body>
 </html>
