Added Github link to website

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             > Dit is is de website die ik voor het vak Informatica heb gemaakt. 
             <br>Klik op de links bovenaan om naar een andere pagina te komen.
             <br>Contact: <a class="hyperlink" href="mailto:40020@youscope.nl">40020@youscope.nl</a>
+            <br>Github Pagina: <a class="hyperlink" href="https://github.com/Teunemans/Schoolwebsite">Teunemans/Schoolwebsite</a>
         </p>
         <div class="imgdiv">
             <img src="landschape.jpeg" alt="Teun"> 
