js change button collor onclick

--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
         </h1>
 
         <input class="inputField" type="password" placeholder="De code" id="username">
-        <button id="button" class="loginText" onclick="checkvalue()">login</button>
+        <button id="button" class="loginText" onclick="checkvalue(); buttonColor();">login</button>
         <p class="loginText">
             Het wachtwoord is "wachtwoord" in het Engels.
             <br>Voer het wachtwoord in en druk op Login
